# parsix

./: .gitignore  LICENSE  Pipfile  README.md  Uik_obj.py  __main__.py  main.py  requirements.txt  setup.cfg  uik_ids.py
parse_uiks/: __main__.py  coords_helper.py  main.py  uik_ids.py  uik_obj.py
parsix/: __init__.py  __main__.py  commissions_id_parser.py  config.py  election_commission.py  main.py  uik_ids.py  uik_obj.py
