[metadata]
name = parsix
version = attr: parsix.__version__
author = attr: parsix.__author__
description = attr: parsix.__doc__
long_description = file: README.md, LICENSE
url = https://github.com/ypypy28/parsix
keywords = parser, elections
license = MIT
classifiers = Programming Language :: Python :: 3

[options]
packages = parsix
install_requires =
    requests==2.27.1
    beautifulsoup4==4.11.1
    lxml==4.8.0
    selenium==4.1.5

[options.entry_points]
console_scripts =
  parsix = parsix.__main__:start
